--- a/Client/vercel.json
+++ b/Client/vercel.json
@@ -1,11 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "Client/dist/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/Client/dist/$1" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
